--- a/NDSCalc.View/NDSCalc.View.csproj
+++ b/NDSCalc.View/NDSCalc.View.csproj
@@ -8,12 +8,13 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>NDSCalc.View</RootNamespace>
     <AssemblyName>NDSCalc.View</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -35,6 +36,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationFramework.Aero" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -61,6 +63,10 @@
     </Compile>
     <Compile Include="Controls\Buttons\CloseButtonControl.cs" />
     <Compile Include="Controls\Buttons\MinimizeButtonControl.cs" />
+    <Compile Include="Controls\InputTextBoxControl.cs" />
+    <Compile Include="Controls\InputTextBoxStakeNDSControl.cs" />
+    <Compile Include="Converters\AmountInWords.cs" />
+    <Compile Include="Converters\NumberInWordsConverter.cs" />
     <Compile Include="Windows\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
     </Compile>
@@ -92,6 +98,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Page Include="Styles\AppMain.Resources.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Styles\Buttons\CloseButtonStyle.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -110,6 +120,10 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj">
+      <Project>{695994e1-2f7b-49b5-9e3d-4e2a41e41c9a}</Project>
+      <Name>Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\NDSCalc.ViewModel\NDSCalc.ViewModel.csproj">
       <Project>{521c58df-a091-4790-adbc-f6a4a298928a}</Project>
       <Name>NDSCalc.ViewModel</Name>
