--- a/NDSCalc.ViewModel/NDSCalc.ViewModel.csproj
+++ b/NDSCalc.ViewModel/NDSCalc.ViewModel.csproj
@@ -32,6 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,12 +45,17 @@
   <ItemGroup>
     <Compile Include="Interfaces\INdsCalculationViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Windows\MainWindowViewModel.Model.cs" />
     <Compile Include="Windows\MainWindowViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj">
       <Project>{695994e1-2f7b-49b5-9e3d-4e2a41e41c9a}</Project>
       <Name>Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\NDSCalc.Model\NDSCalc.Model.csproj">
+      <Project>{C085EA85-0758-478D-B234-A296746E3318}</Project>
+      <Name>NDSCalc.Model</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
